#
# Copyright 2018-2020 TON DEV SOLUTIONS LTD.
#
# Licensed under the SOFTWARE EVALUATION License (the "License"); you may not use
# this file except in compliance with the License.  You may obtain a copy of the
# License at:
#
# https://www.ton.dev/licenses
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific TON DEV software governing permissions and limitations
# under the License.
#

[package]
edition = "2021"
build = "build.rs"
name = "ton_block"
version = "1.7.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
clear_on_drop = { version = "0.2", features = ["no_cc"] }

[dependencies]
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

# External
anyhow = "1"
base64 = "0.13"
crc = "2.1.0"
ed25519 = "1.3.0"
ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
hex = "^0.4.0"
log = "0.4.8"
num = "0.3"
num-traits = "^0.2.8"
rand = "0.8"
sha2 = "0.9.9"
thiserror = "1.0.26"
smallvec = { version = "1.8.0", features = ["const_generics", "union", "write"] }
